--- a/debian13-auto-install-preseed.cfg
+++ b/debian13-auto-install-preseed.cfg
@@ -1,73 +1,57 @@
-### Preseed 自动化安装配置 - Debian 13
-### 适用于 PXE/ISO 自动化安装
-### 注意：此配置会清空整个磁盘并自动安装系统
-
-### 本地化设置
+cat > /root/preseed.cfg <<'EOF'
+### 设置基本信息
+d-i debian-installer/language string en
+d-i debian-installer/country string US
 d-i debian-installer/locale string en_US.UTF-8
-d-i console-setup/ask_detect boolean false
-d-i keyboard-configuration/xkb-keymap select us
+d-i debian-installer/keymap select us
 
-### 时区设置
+### 主机名与域名
+d-i netcfg/get_hostname string US
+d-i netcfg/get_domain string localdomain
+
+### 网络自动配置
+d-i netcfg/choose_interface select auto
+d-i netcfg/get_nameservers string 1.0.0.1 1.1.1.1
+
+### 时区
 d-i time/zone string America/Los_Angeles
 d-i clock-setup/utc boolean true
 d-i clock-setup/ntp boolean true
 
-### 网络配置（静态IP配置）
-d-i netcfg/choose_interface select auto
-d-i netcfg/get_hostname string US
-d-i netcfg/get_domain string localdomain
-d-i netcfg/disable_dhcp boolean true
-d-i netcfg/get_ipaddress string 38.95.121.180
-d-i netcfg/get_netmask string 255.255.255.0
-d-i netcfg/get_gateway string 38.95.121.1
-d-i netcfg/confirm_static boolean true
-d-i netcfg/dns_servers string 1.0.0.1 1.1.1.1
-
-### 用户和密码
-d-i passwd/root-login boolean true
+### Root 密码
 d-i passwd/root-password password Homo114514@
 d-i passwd/root-password-again password Homo114514@
+
+### 禁用普通用户
 d-i passwd/make-user boolean false
 
-### 磁盘分区（整个磁盘自动分区）
+### 磁盘分区（全盘自动覆盖）
 d-i partman-auto/method string regular
-d-i partman-auto/disk string /dev/sda
 d-i partman-auto/choose_recipe select atomic
-d-i partman-auto/confirm boolean true
-d-i partman-auto/confirm_nooverwrite boolean true
-d-i partman/confirm_write_new_label boolean true
-d-i partman/choose_partition select finish
+d-i partman-auto/disk string /dev/sda
+d-i partman-lvm/device_remove_lvm boolean true
+d-i partman-md/device_remove_md boolean true
+d-i partman-partitioning/confirm_write_new_label boolean true
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
 
-### 软件源（仅 Debian 13 官方源）
+### APT 源（Debian 13 官方源）
 d-i mirror/country string manual
 d-i mirror/http/hostname string deb.debian.org
 d-i mirror/http/directory string /debian
 d-i mirror/http/proxy string
-d-i apt-setup/use_mirror boolean true
 d-i apt-setup/services-select multiselect
+d-i apt-setup/use_mirror boolean true
 d-i apt-setup/security_host string security.debian.org
-d-i apt-setup/security_path string /debian-security
 
-### 软件包选择
+### 软件
 tasksel tasksel/first multiselect standard, ssh-server
-d-i pkgsel/include string sudo vim curl wget net-tools
-d-i pkgsel/upgrade select none
 
-### 安装引导程序
+### 引导安装
 d-i grub-installer/only_debian boolean true
 d-i grub-installer/with_other_os boolean true
-d-i grub-installer/bootdev string /dev/sda
 
 ### 安装完成后自动重启
 d-i finish-install/reboot_in_progress note
 
-### 预置完成后执行的命令
-d-i preseed/late_command string \
-    in-target apt-get update; \
-    in-target apt-get dist-upgrade -y; \
-    in-target timedatectl set-timezone America/Los_Angeles; \
-    in-target hostnamectl set-hostname US; \
-    in-target bash -c "echo 'nameserver 1.0.0.1' > /etc/resolv.conf"; \
-    in-target bash -c "echo 'nameserver 1.1.1.1' >> /etc/resolv.conf"
+EOF
